# frame-geolocator

./: .gitignore  README.md  pyproject.toml
data/: .gitignore  README.md  manifest.csv
docs/: architecture.md
src/frame_geolocator/: __init__.py  case_file.py
src/frame_geolocator/tools/: __init__.py  classify_audio_events.py  classify_scene_cues.py  decompose_video.py  extract_audio.py  extract_skyline_profile.py  flash_to_bang_range.py  identify_spoken_language.py  parse_context_note.py  read_text_ocr.py  restrict_candidate_region.py
tests/: test_classify_audio_events.py  test_classify_scene_cues.py  test_decompose_video.py  test_extract_audio.py  test_extract_skyline_profile.py  test_flash_to_bang_range.py  test_identify_spoken_language.py  test_parse_context_note.py  test_read_text_ocr.py  test_restrict_candidate_region.py
